--- a/household_account/package.json
+++ b/household_account/package.json
@@ -12,6 +12,7 @@
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.5",
     "react-modal": "^3.16.1"
   },
   "devDependencies": {
