--- a/household_account/package.json
+++ b/household_account/package.json
@@ -13,7 +13,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
-    "react-modal": "^3.16.1"
+    "react-modal": "^3.16.1",
+    "react-select": "^5.8.0"
   },
   "devDependencies": {
     "@types/node": "^20",
